--- a/style/course.css
+++ b/style/course.css
@@ -73,3 +73,8 @@
 .jumpmenu {
     margin-top: 10px;
 }
+
+/* Makes floating images float properly on the course page */
+.path-course-view .course-content .content .no-overflow {
+    overflow: visible;
+}
